@@ -71,7 +71,7 @@ public class XMLUtil {
 	public static Element getFirstChildrenWithName(Element element, String... names) {
 		List<Element> elements = getChildrenWithName(element, names);
 		if (!elements.isEmpty()) {
-			return elements.get(0);
+			return elements.getFirst();
 		} else {
 			return null;
 		}
